--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
     "content_scripts": [{
         "matches": ["<all_urls>"],
         "js": ["jquery-1.11.0.min.js", "noty/packaged/jquery.noty.packaged.min.js", "content.js"],
-        "run_at": "document_end"
+        "run_at": "document_idle"
     }],
     "background": {
         "scripts": ["background.js"]
